--- a/pom.xml
+++ b/pom.xml
@@ -1,57 +1,75 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.troplay</groupId>
-  <artifactId>troplay</artifactId>
-  <packaging>jar</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>troplay</name>
-  <url>http://maven.apache.org</url>
+	<modelVersion>4.0.0</modelVersion>
+  	<groupId>org.troplay</groupId>
+ 	<artifactId>troplay</artifactId>
+  	<packaging>jar</packaging>
+  	<version>1.0-SNAPSHOT</version>
+  	<name>troplay</name>
+  	<url>http://maven.apache.org</url>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-	<dependency>
-   		 <groupId>org.xerial</groupId>
-   		 <artifactId>sqlite-jdbc</artifactId>
-    		<version>3.8.9.1</version>
-	</dependency>
-  </dependencies>
+  	<dependencies>
+    		<dependency>
+      			<groupId>junit</groupId>
+      			<artifactId>junit</artifactId>
+      			<version>3.8.1</version>
+      			<scope>test</scope>
+    		</dependency>
 
-<build>
-	<pluginManagement>
-		<plugins>
-      			<plugin>
-        			<groupId>org.apache.maven.plugins</groupId>
-        			<artifactId>maven-compiler-plugin</artifactId>
-        			<version>3.0</version>
-        			<configuration>
-          				<source>1.5</source>
-          				<target>1.5</target>
-        			</configuration>
-      			</plugin>
+		<dependency>
+   			<groupId>org.xerial</groupId>
+   		 	<artifactId>sqlite-jdbc</artifactId>
+    			<version>3.8.9.1</version>
+		</dependency>
+  	</dependencies>
 
-			<plugin>
-      			<!-- Build an executable JAR -->
-      				<groupId>org.apache.maven.plugins</groupId>
-      				<artifactId>maven-jar-plugin</artifactId>
-      				<version>2.4</version>
-      				<configuration>
-        				<archive>
-          					<manifest>
-            						<addClasspath>true</addClasspath>
-            						<classpathPrefix>lib/</classpathPrefix>
-            						<mainClass>troplay.ControlFlujo</mainClass>
-          					</manifest>
-        				</archive>
-      				</configuration>
-    			</plugin>
-  		</plugins>
-	</pluginManagement>
-</build>
+	<build>
+		<pluginManagement>
+			<plugins>
+      				<plugin>
+        				<groupId>org.apache.maven.plugins</groupId>
+        				<artifactId>maven-compiler-plugin</artifactId>
+        				<version>3.0</version>
+        				<configuration>
+          					<source>1.5</source>
+          					<target>1.5</target>
+        				</configuration>
+      				</plugin>
+
+				<plugin>
+      				<!-- Build an executable JAR -->
+      					<groupId>org.apache.maven.plugins</groupId>
+      					<artifactId>maven-jar-plugin</artifactId>
+      					<version>2.4</version>
+      					<configuration>
+        					<archive>
+          						<manifest>
+            							<addClasspath>true</addClasspath>
+            							<classpathPrefix>${project.build.directory}/lib/</classpathPrefix>
+            							<mainClass>troplay.ControlFlujo</mainClass>
+          						</manifest>
+        					</archive>
+      					</configuration>
+    				</plugin>
+
+				<plugin>
+        				<groupId>org.apache.maven.plugins</groupId>
+        				<artifactId>maven-dependency-plugin</artifactId>
+        				<version>2.10</version>
+        				<executions>
+          					<execution>
+            						<phase>install</phase>
+            						<goals>
+              							<goal>copy-dependencies</goal>
+            						</goals>
+            						<configuration>
+              							<outputDirectory>./target/lib</outputDirectory>
+            						</configuration>
+          					</execution>
+        				</executions>
+      				</plugin>
+  			</plugins>
+		</pluginManagement>
+	</build>
 </project>
