--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,14 @@
 		<dependency>
    			<groupId>org.xerial</groupId>
    		 	<artifactId>sqlite-jdbc</artifactId>
-    			<version>3.8.9.1</version>
+			<version>3.8.9.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.12</version>
+			<scope>provided</scope>
 		</dependency>
   	</dependencies>
 
