--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
           						<manifest>
             							<addClasspath>true</addClasspath>
             							<classpathPrefix>${project.build.directory}/lib/</classpathPrefix>
-            							<mainClass>troplay.ControlFlujo</mainClass>
+            							<mainClass>troplay.FlowControl</mainClass>
           						</manifest>
         					</archive>
       					</configuration>
