--- a/pom.xml
+++ b/pom.xml
@@ -22,59 +22,61 @@
    		 	<artifactId>sqlite-jdbc</artifactId>
 			<version>3.8.9.1</version>
 		</dependency>
-
-		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>1.18.12</version>
-		</dependency>
   	</dependencies>
 
 	<build>
 		<pluginManagement>
 			<plugins>
-      				<plugin>
-        				<groupId>org.apache.maven.plugins</groupId>
-        				<artifactId>maven-compiler-plugin</artifactId>
-        				<version>3.0</version>
-        				<configuration>
-          					<source>1.5</source>
-          					<target>1.5</target>
-        				</configuration>
-      				</plugin>
+				<plugin>
+        			<groupId>org.codehaus.mojo</groupId>
+        			<artifactId>exec-maven-plugin</artifactId>
+        			<version>3.1.0</version>
+        			<configuration>
+          				<mainClass>troplay.ControlFlujo</mainClass>
+        			</configuration>
+      			</plugin>
+      			
+  				<plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-compiler-plugin</artifactId>
+    				<version>3.0</version>
+    				<configuration>
+      					<source>1.5</source>
+      					<target>1.5</target>
+    				</configuration>
+  				</plugin>
 
 				<plugin>
-      				<!-- Build an executable JAR -->
-      					<groupId>org.apache.maven.plugins</groupId>
-      					<artifactId>maven-jar-plugin</artifactId>
-      					<version>2.4</version>
-      					<configuration>
-        					<archive>
-          						<manifest>
-            							<addClasspath>true</addClasspath>
-            							<classpathPrefix>${project.build.directory}/lib/</classpathPrefix>
-            							<mainClass>troplay.FlowControl</mainClass>
-          						</manifest>
-        					</archive>
-      					</configuration>
-    				</plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-jar-plugin</artifactId>
+					<version>2.4</version>
+					<configuration>
+						<archive>
+	  						<manifest>
+	    							<addClasspath>true</addClasspath>
+	    							<classpathPrefix>${project.build.directory}/lib/</classpathPrefix>
+	    							<mainClass>troplay.FlowControl</mainClass>
+	  						</manifest>
+						</archive>
+					</configuration>
+				</plugin>
 
 				<plugin>
-        				<groupId>org.apache.maven.plugins</groupId>
-        				<artifactId>maven-dependency-plugin</artifactId>
-        				<version>2.10</version>
-        				<executions>
-          					<execution>
-            						<phase>install</phase>
-            						<goals>
-              							<goal>copy-dependencies</goal>
-            						</goals>
-            						<configuration>
-              							<outputDirectory>./target/lib</outputDirectory>
-            						</configuration>
-          					</execution>
-        				</executions>
-      				</plugin>
+    				<groupId>org.apache.maven.plugins</groupId>
+    				<artifactId>maven-dependency-plugin</artifactId>
+    				<version>2.10</version>
+    				<executions>
+      					<execution>
+        						<phase>install</phase>
+        						<goals>
+          							<goal>copy-dependencies</goal>
+        						</goals>
+        						<configuration>
+          							<outputDirectory>./target/lib</outputDirectory>
+        						</configuration>
+      					</execution>
+    				</executions>
+  				</plugin>
   			</plugins>
 		</pluginManagement>
         <plugins>
@@ -82,8 +84,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>19</source>
+                    <target>19</target>
                 </configuration>
             </plugin>
         </plugins>
